--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-*.zip
-*.csv
-.ipynb_checkpoints
-trees
-renamed_trees
-webdata
+Data/
+Output/
+*.jar
 
+.Rprofile
 # Created by https://www.toptal.com/developers/gitignore/api/r
 # Edit at https://www.toptal.com/developers/gitignore?templates=r
 
